fix: Change scale for selected class to prevent overflow to other button

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -206,7 +206,7 @@ h6 {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  gap: 1em;
+  gap: 2em;
 }
 
 .active-player-display button {
@@ -333,7 +333,7 @@ button:focus-visible {
 .selected {
   background-color: var(--bg-btn);
   color: var(--color-btn);
-  scale: 1.4;
+  scale: 1.3;
 }
 
 /* Footer styles */
